--- a/src/scss/sections/who-we-are.scss
+++ b/src/scss/sections/who-we-are.scss
@@ -298,8 +298,10 @@
                 margin: 0 auto 1.5rem;
                 display: flex;
                 flex-direction: column;
+                align-items: flex-start;
                 justify-content: center;
-                border: 0.1rem solid #f6b823;
+                background-color: rgba(variables.$bg, 0.5);
+                border: 1px solid variables.$color-primary;
                 border-radius: variables.$border-radius-pill;
                 backdrop-filter: variables.$glass-blur;
                 padding: 0 6rem 0 2rem;
@@ -308,20 +310,7 @@
                 @media screen and (max-width: 430px) and (orientation: portrait) {
                     order: 1;
                     position: absolute;
-                    right: 8%;
-                    width: 32.5rem;
-                    height: 5.6rem;
-                    margin: 0 0 -5.6rem 0;
-                    padding: 0 6rem 0 2rem;
-                    background-color: rgba(variables.$bg, 0.5);
-                    border: 1px solid variables.$color-primary;
-                    backdrop-filter: variables.$glass-blur;
-                    border-radius: variables.$border-radius-pill;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: flex-start;
-                    overflow: visible;
+                    right: 7%;
                 }
 
                 @media screen and (min-width: variables.$tablet) {
